--- a/server.properties
+++ b/server.properties
@@ -33,4 +33,4 @@ spawn-monsters=true
 view-distance=10
 generate-structures=true
 spawn-protection=0
-motd=\u00A7e\=\: \u00A76Mine \u00A76Theft \u00A76International \u00A7e\:\= \n(INDEV)
+motd=\u00A7e\=\: \u00A76Mine \u00A76Theft \u00A76International \u00A7e\:\= \n(http://goo.gl/A8DAsQ)
